Fix color contrast accessibility violation

--- a/src/index.css
+++ b/src/index.css
@@ -326,10 +326,12 @@ textarea {
   color: #2cc5d2;
 }
 
+
 .list-item.TASK_ARCHIVED input[type="text"] {
-  color: #a0aec0;
+  color: #4a5568;
   text-decoration: line-through;
-}
+ }
+ 
 
 .list-item:hover {
   background-image: linear-gradient(to bottom, #e5f9f7 0%, #f0fffd 100%);
